# experimental-hs-tapl

./: .gitignore  LICENSE  README.md  TODO.md  example.lac  tapl.cabal
app/: Main.hs
src/: Lambda.hs
src/Arith/: Term.hs
src/Lambda/: Parse.hs  Reduce.hs  Term.hs
src/Lambda/Reduce/: Alpha.hs  Beta.hs  Context.hs  Show.hs
src/Util/: Trace.hs
src/Util/Trace/: Class.hs  Dumpable.hs  Impl.hs  Log.hs
