name:                tapl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/saksmt/experimental-hs-tapl#readme
license:             BSD3
license-file:        LICENSE
author:              Kirill Saksin
maintainer:          smt@smt.run
copyright:           2017 Saksin Kirill
category:            Computer Science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Util.Trace.Class
                     , Util.Trace.Log
                     , Util.Trace.Dumpable
                     , Util.Trace.Impl
                     , Util.Trace
                     , Arith.Term
                     , Lambda.Term
                     , Lambda.Reduce.Alpha
                     , Lambda.Reduce.Beta
                     , Lambda.Reduce.Context
                     , Lambda.Reduce.Show
                     , Lambda.Reduce
                     , Lambda.Parse
                     , Lambda
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
  default-language:    Haskell2010

executable tapl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tapl
                     , repline
                     , mtl
                     , optparse-applicative
  default-language:    Haskell2010

test-suite tapl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tapl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/saksmt/experimental-hs-tapl
